--- a/test.styl
+++ b/test.styl
@@ -5,4 +5,11 @@ $borderStyle = dotted
 body
   color mainColor
   border 1px $borderStyle mainColor
-  max-width siteWidth	
+  max-width siteWidth
+
+content
+  padding 10px
+  a
+  	text-decoration none
+  	:hover
+  		text-decoration underline
